fixing svg page load slowdowns and fixing new png overflow issue

--- a/styles/main.css
+++ b/styles/main.css
@@ -24,6 +24,7 @@ ul a:hover {
 }
 
 body {
+    overflow-x: hidden;
     padding-left: 10px;
     display: flex;
     flex-direction: column;
@@ -35,7 +36,7 @@ body {
     font-family: "Atkinson Hyperlegible Next";
     position: relative;
     
-    background-image: url("../asset/blurry-gradient.svg");
+    background-image: url("../asset/short_gradient.png");
     background-repeat: no-repeat, no-repeat;
     background-size: cover, cover;
     background-position: center, center;
